<?xml version="1.0"?>
<package>
  <name>velodyne_slam</name>
  <version>0.0.0</version>
  <description>The velodyne_slam package</description>
  <maintainer email="sasaki@todo.todo">sasaki</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
